# local-rag-notebook

./: .env.example  .gitignore  Makefile  README.md  clear-parser-data.ps1  cli.py  config.yaml  config_answer.example.yaml  config_reranker.example.yaml  docker-compose.yml  eval.py  pyproject.toml  requirements-dev.txt  requirements.txt  synthesizer.py  test_synthesizer.py
eval/: gold.jsonl
llm/: base.py  factory.py  ollama.py
local_rag_notebook/: app.py  logging_utils.py  table.py
local_rag_notebook/answer/: classify.py  extract.py
local_rag_notebook/index/: dense.py  lexical.py  schema.py
local_rag_notebook/ingest/: clean.py  csv_tsv.py  md_txt.py  normalize.py  pdf.py
local_rag_notebook/retrieve/: fuse.py  rerank.py
local_rag_notebook/utils/: log.py  output.py
outputs/: 20250819_203336_what-are-study-domains.html
tests/: conftest.py  test_abstain_reason.py  test_app_contexts.py  test_chunk_dedup.py  test_chunker.py  test_citations.py  test_filters_and_delete.py  test_pack_context.py  test_rerank_score_alignment.py  test_smoke.py  test_synth_json.py  test_table_csv.py  test_table_tsv.py  test_vectorstore.py
web/: Dockerfile  app.py  chunker.py  embeddings.py  ingest.py  requirements.txt  vectorstore.py
