[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-rag-notebook"
version = "0.0.0"
description = "Local, NotebookLM-style retrieval & grounded synthesis over your documents."
requires-python = ">=3.10"
readme = "README.md"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = "\\.pyi?$"
extend-exclude = "(^\\.venv/|^data/|^outputs/)"

[tool.isort]
profile = "black"
line_length = 100
extend_skip = [".venv", "data", "outputs"]

[tool.ruff]
target-version = "py310"
line-length = 100
# E,F: pyflakes/pycodestyle; I: import sort; B: flake8-bugbear; UP: pyupgrade
select = ["E", "F", "I", "B", "UP"]
ignore = [
  "E203",  # whitespace before ':', compatible with black
  "E266",  # too many leading '#' for block comment
]
exclude = [".venv", "data", "outputs", "build", "dist"]

[tool.ruff.lint.isort]
known-first-party = ["local_rag_notebook"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*", "*Tests"]
python_functions = ["test_*"]

[tool.coverage.run]
branch = true
source = ["local_rag_notebook"]
omit = ["**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
